# EMI-Script

./: .grammar  CMakeLists.txt  ScriptTest.ril  func.ril  readme.md
CLI/: CMakeLists.txt
CLI/src/: GameFunctions.cpp  main.cpp
EMIScript/: CMakeLists.txt
EMIScript/include/EMI/: EMI.h  Value.h
EMIScript/src/: BaseObject.h  Core.cpp  Core.h  Defines.h  EMI.cpp  EMLibFormat.cpp  EMLibFormat.h  Function.cpp  Function.h  Helpers.cpp  Helpers.h  Intrinsic.cpp  Logger.cpp  Logger.h  Namespace.h  NativeFuncs.cpp  Opcodes.h  Symbol.cpp  Symbol.h  VM.cpp  VM.h  Variable.cpp  Variable.h
EMIScript/src/Objects/: ArrayObject.cpp  ArrayObject.h  FunctionObject.cpp  FunctionObject.h  StringObject.cpp  StringObject.h  UserObject.cpp  UserObject.h
EMIScript/src/Parser/: AST.cpp  AST.h  Lexemes.h  Lexer.cpp  Lexer.h  ParseHelper.cpp  ParseTable.cpp  ParseTable.h  Parser.cpp  Parser.h  grammar.cpp  grammar.h
Game/: CMakeLists.txt  GameFunctions.cpp  main.cpp
Script/: CMakeLists.txt
Script/include/Eril/: Eril.h  Eril.hpp  Variable.h
Script/src/: AST.cpp  AST.h  BaseObject.h  Core.cpp  Core.h  Defines.h  Eril.cpp  Function.h  Helpers.cpp  Helpers.h  Intrinsic.cpp  Intrinsic.h  Lexemes.h  Lexer.cpp  Lexer.h  Logger.cpp  Logger.h  Namespace.h  NativeFuncs.cpp  NativeFuncs.h  Object.h  Opcodes.h  ParseTable.cpp  ParseTable.h  Parser.cpp  Parser.h  StringObject.cpp  StringObject.h  Symbol.h  VM.cpp  VM.h  Variable.cpp  Variable.h
Script/src/Objects/: ArrayObject.cpp  ArrayObject.h  FunctionObject.cpp  FunctionObject.h  StringObject.cpp  StringObject.h  UserObject.cpp  UserObject.h
Script/src/Parser/: AST.cpp  AST.h  Lexemes.h  Lexer.cpp  Lexer.h  ParseHelper.cpp  ParseHelper.h  ParseTable.cpp  ParseTable.h  Parser.cpp  Parser.h  grammar.cpp  grammar.h
Scripts/: game.ril
Startup/: CMakeLists.txt  main.cpp
demos/AStarFinder/: CMakeLists.txt  GameFunctions.cpp
demos/Benchmark/: CMakeLists.txt  main.cpp
demos/Benchmark/Scripts/: Bench_ArrayOps.ril  Bench_ConcurrencySim.ril  Bench_ErrorHandling.ril  Bench_FieldAccess.ril  Bench_FunctionPointers.ril  Bench_LongLoops.ril  Bench_MapSetGet.ril  Bench_ObjectCreation.ril  Bench_Recursion.ril  Bench_StringManip.ril
demos/CLI/: CMakeLists.txt
demos/CLI/Scripts/: MapSet_JSON.ril
demos/CLI/src/: main.cpp
include/EMI/: EMI.h  TypeConverter.h  Value.h
include/EMIDev/: EmiModule.h  Variable.h
src/: BaseObject.h  CMakeLists.txt  Core.cpp  Core.h  DebugInfo.cpp  DebugInfo.h  Defines.h  EMI.cpp  EMLibFormat.cpp  EMLibFormat.h  Function.cpp  Function.h  Helpers.cpp  Helpers.h  Intrinsic.cpp  Intrinsic.h  Logger.cpp  Logger.h  ModuleLoader.cpp  ModuleLoader.h  Namespace.cpp  Namespace.h  Opcodes.h  Symbol.cpp  Symbol.h  TypeConverters.h  VM.cpp  VM.h  Variable.cpp  Variable.h
src/Objects/: ArrayObject.h  FunctionObject.cpp  FunctionObject.h  StringObject.cpp  StringObject.h  UserObject.cpp  UserObject.h
src/Parser/: AST.cpp  AST.h  Lexemes.h  Lexer.cpp  Lexer.h  Lexerold  Node.cpp  Node.h  NodePool.h  ParseHelper.h  ParseTable.cpp  Parser.cpp  Parser.h  Profiler.h  grammar.cpp  grammar.h
